# opendrive-cpp

./: .gitignore  CHANGELOG  CMakeLists.txt  README.md  setup.py
.github/workflows/: build.yaml  macos-build.yaml  ubuntu-build.yaml
cmake/: opendrive-cpp.pc.in  package.cmake
include/opendrive-cpp/: opendrive.h
include/opendrive-cpp/adapter/: adapter.h  geometry_adapter.h  junction_adapter.h  lane_adapter.h  map_adapter.h  road_adapter.h  section_adapter.h  util_adapter.h
include/opendrive-cpp/common/: choices.h  common.hpp  macros.h  status.h
include/opendrive-cpp/common/spiral/: odrSpiral.h
include/opendrive-cpp/core/: base.h  boundary.h  geometry.h  lane.h  road.h  section.h  types.h  types.hpp
include/opendrive-cpp/geometry/: core.h  element.h  enums.h  types.h
include/opendrive-cpp/parser/: adapter.h  converter.h  header_parser.h  header_xml_parser.h  junction_parser.h  junction_xml_parser.h  lanes_xml_parser.h  map_parser.h  map_xml_parser.h  parser.h  road_lanes_offset_parser.h  road_lanes_parser.h  road_lanes_section_parser.h  road_link_parser.h  road_parser.h  road_planview_parser.h  road_type_parser.h  road_xml_parser.h  section_parser.h  util_parser.h  util_xml_parser.h
scripts/: build.sh  build_tests.sh  install.py  install.sh  run_all_test.sh  run_tests.sh
src/: opendrive.cc
src/adapter/: adapter.cc  geometry_adapter.cc  junction_adapter.cc  lane_adapter.cc  map_adapter.cc  road_adapter.cc  section_adapter.cc  util_adapter.cc
src/common/: choices.cc
src/common/spiral/: odrSpiral.cc  odrSpiral.cpp
src/parser/: adapter.cc  converter.cc  header_parser.cc  header_xml_parser.cc  junction_parser.cc  junction_xml_parser.cc  lanes_xml_parser.cc  map_parser.cc  map_xml_parser.cc  parser.cc  road_lanes_offset_parser.cc  road_lanes_parser.cc  road_lanes_section_parser.cc  road_link_parser.cc  road_parser.cc  road_planview_parser.cc  road_type_parser.cc  road_xml_parser.cc  section_parser.cc  util_parser.cc  util_xml_parser.cc
tests/: CMakeLists.txt  adapter_map_test.cc  adapter_road_test.cc  adapter_section.cc  adapter_section_test.cc  adapter_test.cc  case.cc  common_test.cc  converter_test.cc  geometry_test.cc  header_parser_test.cc  opendrive_test.cc  parser_header_test.cc  parser_junction_test.cc  parser_map_test.cc  parser_road_test.cc  parser_roadlanes_test.cc  parser_roadlink_test.cc  parser_roadplanview_test.cc  parser_roadtype_test.cc  save_test.cc
tests/data/: Ex_Simple-LaneOffset.xodr  Town01.xodr  UC_Simple-X-Junction.xodr  case1.xodr  case2.xodr  case3.xodr  only-unittest.xodr
tests/script/: run.sh  run_all_test.sh
tools/: display_points.py
